This file documents the revision history for the Monitoring Webinterface Thruk.


0.50    Fri Mar 19 20:11:48 CET 2010
          - add backends can be enabled in extinfo 1/2
          - added start_page config option
          - added sample pnp ssi
          - fixed navbar

0.48    Thu Mar 18 20:32:39 CET 2010
          - changed navbar show/hide
          - added !~ filter
          - fixed themes

0.46    Wed Mar 17 21:47:57 CET 2010
          - default state of command checkboxes can be configured
          - cgi.cfg will be reloaded if changed ( without restarting )
          - backends can be setup with initial hidden state
          - fixed problem with paths
          - fixed 'check all' link for hostdetails
          - fixed problem with umlauts in comments

0.44    Fri Mar 12 17:31:10 CET 2010
          - added server side includes

0.42    Fri Mar 12 17:31:10 CET 2010
          - changed datepicker
          - fixed problem with sorting empty results
          - fixed host/service totals when using complex filters

0.40    Sun Mar  7 21:12:37 CET 2010
          - change status.cgi filter inline
          - combine several filter
          - strict authorization option

0.34    Wed Mar  3 09:40:49 CET 2010
          - send multiple commands from status detail
          - date picker for logfile pages (history, showlog and notifications)
          - overlib for long plugin out in status details
          - added new theme Nuvola

0.32    Fri Feb 26 09:16:20 CET 2010
          - added summary report
          - bugfixes

0.31    Thu Feb 25 20:24:15 CET 2010
          - fixed zoom for trends
          - made histogram links optional
          - made automatic page refresh is stopable
          - specific backends can be disabled

0.30    Tue Feb 16 23:40:09 CET 2010
          - updated meta data, documentation
          - added binary package scripts

0.27_3  Tue Feb 16 16:11:00 CET 2010
          - fixed sorting with filters
